--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,87 +1,35 @@
-body, html {
-  height: 100%;
-  margin: 0;
-  font-family: 'Montserrat', sans-serif;
-  overflow: auto;
-}
-
-h2 {
-  font-weight: bolder;
-  font-size: 28pt;
-}
-
-h3 {
-  font-weight: bolder;
-  font-size: 24pt;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 1024px;
-  text-align: center;
-}
-
-.btn {
-  background: transparent;
-  font-size: 12pt;
-  text-transform: uppercase;
-  padding: 16px 32px;
-  border-radius: 4px;
-  font-weight: bold;
-  cursor: pointer;
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  position: relative;
-  &:before {
-    content: '';
-    position: absolute;
-    border: 2px solid #ffda5a;
-    border-radius: 4px;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-  }
-  &:hover:before, &:focus:before, &:active:before {
-    -webkit-animation-name: hvr-ripple-out;
-    animation-name: hvr-ripple-out;
-  }
-  &:focus {
-    outline: none;
-  }
-  &:hover {
-    color: #111;
-    background: #ffda5a;
-  }
-}
-
-.skill {
-  margin: 24px;
-}
+@import 'variables';
+@import 'general';
+@import 'arrow-down';
 
 /* Introdiction */
 
 .introduction {
   position: relative;
-  background-image: url("http://placekitten.com/g/1920/1280");
-  height: 100%;
+  background:  linear-gradient($fadedgray, $fadedgray), url("../images/laptop.jpg");
+  height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  color: #eee;
+  color: $white;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  .info {
+    flex: 1;
+    a {
+      text-decoration: none;
+    }
+  }
   .logo {
-    margin-top: 64px;
+    margin-top: 128px;
     height: 156px;
     width: auto;
+    border-radius: 50%;
   }
   h1 {
     font-size: 38pt;
-    margin-top: 96px;
+    margin-top: 48px;
     font-weight: bold;
   }
   .btn {
@@ -92,14 +40,11 @@ h3 {
     }
   }
   .see-more {
-    position: absolute;
-    bottom: 0px;
+    margin-top: 128px;
     width: 100%;
     text-align: center;
     margin-bottom: 32px;
-    img {
-      width: 24px;
-    }
+    font-size: 24px;        
   }
 }
 
