Added espertise section of website

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -8,12 +8,12 @@ body, html {
   }
   
   h2 {
-    font-weight: bolder;
+    font-weight: 400;
     font-size: 28pt;
   }
   
   h3 {
-    font-weight: bolder;
+    font-weight: 400;
     font-size: 24pt;
   }
   
