--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   color: $white;
   text-align: center;
   display: flex;
@@ -49,18 +50,33 @@
 }
 
 .expertise {
+  padding: 32px;
+  span {
+    color: $lightgray;
+    font-size: 18px;
+  }
   .row {
     display: flex;
+    margin-top: 32px;
   }
   .skill {
     flex: 1;
+    padding: 8px 16px;
+    span {
+      font-size: 96px;
+    }
+    img {
+      margin-top: 64px;
+      height: 156px;
+      width: auto;
+    }
+    p {
+      text-align: center;
+      font-size: 18px;
+      line-height: 24px;        
+      color: $lightgray;    
+    }
   }
-}
-
-.skill img {
-  margin-top: 64px;
-  height: 156px;
-  width: auto;
 }
 
 /* Projects */
