--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -11,6 +11,10 @@ body, html {
     font-weight: 400;
     font-size: 28pt;
   }
+
+  a {
+    text-decoration: none;
+  }
   
   h3 {
     font-weight: 400;
