--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -176,15 +176,16 @@
 .footer {
   background-color: #252a31;
   .logo {
-    margin-top: 64px;
-    height: 90px;
+    margin-top: 96px;
+    height: 48px;
     width: auto;
+    border-radius: 50%;
   }
 }
 
 .copyright {
   color: #929498;
-  padding: 16px;
+  padding: 8px;
 }
 
 .social-links {
